--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p class="sign-text"><img src="images/qzone.jpeg"><a href="https://mp.qzone.qq.com/u/3353695243?uin=3353695243&is_famous_space=0&brand_flag=0">&nbsp;Ta的空间</a></p>
                 <p class="sign-text"><img src="images/camera.jpeg">&nbsp;精选照片</p>
                 <button class="btn-blue" onclick="window.open('http://wpa.qq.com/msgrd?v=3&uin=3353695243&site=qq&menu=yes')">添加好友</button>
-                <button class="btn-music" id="music">音乐设置</button>
+                <button class="btn-music" id="music">看猴子</button>
             </div>
         </div>
     </div>
